--- a/FinalProject/Views/Home/Index.cshtml
+++ b/FinalProject/Views/Home/Index.cshtml
@@ -4,19 +4,16 @@
 
 @model IEnumerable<FinalProject.Models.Computer>
 
-<div class="jumbotron">
-    <h1>Aggregate Store</h1>
-    <section>
-        <p class="lead">This website helps you compare prices and items from all around the nation.</p>
-    </section>
-</div>
-
 <div class="row">
-    <video width="1000" height="500" controls>
+    @*<video width="1000" height="500" controls>
         <source src="/Content/iphone6.mp4" type="video/mp4">
+    </video>*@
+    <video width="100%" autoplay loop>
+        <source src="https://s3.amazonaws.com/www-assets.invisionapp.com/Homepage/enterprise-loop.mp4" type="video/mp4">
     </video>
+    </p>
 </div>
-<div class="row">
+<div class="row" >
     <div class="col-md-4">
         <h2>Popular Items</h2>
 
