--- a/FinalProject/Content/bootstrap.css
+++ b/FinalProject/Content/bootstrap.css
@@ -314,8 +314,7 @@ body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 14px;
   line-height: 1.428571429;
-  color: #333333;
-  background-color: #ffffff;
+  background-color: #ced3d3;
 }
 
 input,
@@ -3818,7 +3817,6 @@ textarea.input-group-sm > .input-group-btn > .btn {
 .nav > li > a {
   position: relative;
   display: block;
-  padding: 10px 15px;
 }
 
 .nav > li > a:hover,
@@ -4501,12 +4499,12 @@ textarea.input-group-sm > .input-group-btn > .btn {
 }
 
 .navbar-inverse {
-  background-color: #222222;
-  border-color: #080808;
+  background-color: #30373b;
 }
 
 .navbar-inverse .navbar-brand {
-  color: #999999;
+    color: #ffffff;
+    font-weight: bold;
 }
 
 .navbar-inverse .navbar-brand:hover,
@@ -4520,7 +4518,21 @@ textarea.input-group-sm > .input-group-btn > .btn {
 }
 
 .navbar-inverse .navbar-nav > li > a {
-  color: #999999;
+  color: #dddddd;
+}
+
+.navbar-inverse a {
+  color: #dddddd;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+
+.navbar-inverse a:hover,
+.navbar-inverse a:focus {
+  color: #ffffff;
+  background-color: transparent;
+  text-decoration: none;
 }
 
 .navbar-inverse .navbar-nav > li > a:hover,
