--- a/FinalProject/Views/Shared/_Layout.cshtml
+++ b/FinalProject/Views/Shared/_Layout.cshtml
@@ -1,9 +1,10 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
+    <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+    <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - Aggregate Store</title>
+    <title>@ViewBag.Title - Dev Tools Search Angine</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 
@@ -13,17 +14,14 @@
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Aggregate Store", "Index", "Home", null, new { @class = "navbar-brand" })
+                @Html.ActionLink("Dev Tools Search Angine", "Index", "Home", null, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse navigation">
                 <nav class="nav navbar-nav">
-                    @Html.ActionLink("Home", "Index", "Home") | 
-                    @Html.ActionLink("Items", "Index", "Item") | 
-                    @Html.ActionLink("Stores", "Index", "Store") | 
+                    @Html.ActionLink("Home", "Index", "Home")
+                    @Html.ActionLink("Top-Tools", "Index", "Item")
+                    @Html.ActionLink("Top-Companies", "Index", "Store")
                     @if (User.IsInRole("Admin"))
                     {
                         @Html.ActionLink("Statistics", "Index", "Statistics")<text> | </text>
@@ -34,13 +32,14 @@
             </div>
         </div>
     </div>
-    <div class="container body-content">
-        @RenderBody()
-        <hr />
-        <footer>
-            <p>Created by AK, &copy; @DateTime.Now.Year</p>
-        </footer>
-    </div>
+<div class="container body-content">
+    
+    @RenderBody()
+    <hr/>
+    <footer>
+        <p>Created by Nadav Kaner, Bar Miliavsky, Yakir Kadkoda and Mor Tal, &copy; @DateTime.Now.Year</p>
+    </footer>
+</div>
     
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
