--- a/FinalProject/Views/Home/Index.cshtml
+++ b/FinalProject/Views/Home/Index.cshtml
@@ -4,16 +4,16 @@
 
 @model IEnumerable<FinalProject.Models.Computer>
 
-<div class="row">
+<div id ="video-shaded" class="row" style="position: relative;">
     @*<video width="1000" height="500" controls>
         <source src="/Content/iphone6.mp4" type="video/mp4">
     </video>*@
     <video width="100%" autoplay loop>
-        <source src="https://s3.amazonaws.com/www-assets.invisionapp.com/Homepage/enterprise-loop.mp4" type="video/mp4">
+        <source src="https://s3.amazonaws.com/www-assets.invisionapp.com/Homepage/enterprise-loop.mp4" type="video/mp4" style="z-index: 10;">
     </video>
-    </p>
+    <div style="position: absolute; top: 0; right: 0; width: 100%; height: 100%; background-color: #191d22; background-color: rgba(25,29,34,.75);"></div>
 </div>
-<div class="row" >
+<div class="row" style="z-index: 1; background-color: white; position: relative; top: -275px;">
     <div class="col-md-4">
         <h2>Popular Items</h2>
 
@@ -108,4 +108,7 @@
      }
 
     .jumbotron h1:hover { color: blue; }
+    #video-shaded:before {
+        background: rgba(25,29,34,0.75);
+    }
 </style>
