--- a/FinalProject/Views/Home/Index.cshtml
+++ b/FinalProject/Views/Home/Index.cshtml
@@ -4,14 +4,19 @@
 
 @model IEnumerable<FinalProject.Models.Computer>
 
-<div id ="video-shaded" class="row" style="position: relative;">
+<div id="video-shaded" class="row" style="position: relative;">
     @*<video width="1000" height="500" controls>
-        <source src="/Content/iphone6.mp4" type="video/mp4">
-    </video>*@
+            <source src="/Content/iphone6.mp4" type="video/mp4">
+        </video>*@
     <video width="100%" autoplay loop>
         <source src="https://s3.amazonaws.com/www-assets.invisionapp.com/Homepage/enterprise-loop.mp4" type="video/mp4" style="z-index: 10;">
     </video>
-    <div style="position: absolute; top: 0; right: 0; width: 100%; height: 100%; background-color: #191d22; background-color: rgba(25,29,34,.75);"></div>
+    <div style="position: absolute; top: 0; right: 0; width: 100%; height: 100%; background-color: #191d22; background-color: rgba(25, 29, 34, .75);">
+        <div style="position: absolute; top: 40%; right: 0; width: 100%; height: 100%; text-align: center; font-size: 30px; font-weight: bold; color: white; text-shadow: 0px 0px 10px black;">
+            Stay updated with the most latest development solutions! <br />
+            Learn which are the hotest dev tools in the industry, that fit your project!
+        </div>
+    </div>
 </div>
 <div class="row" style="z-index: 1; background-color: white; position: relative; top: -275px;">
     <div class="col-md-4">
@@ -74,16 +79,6 @@
         </table>
     </div>
 </div>
-<aside>
-    <canvas id="myCanvas1" width="220" height="10"
-            style="border: 1px solid #000000;"></canvas>
-    <p>
-        The best place for looking up items.
-    </p>
-    <canvas id="myCanvas2" width="220" height="10"
-            style="border: 1px solid #000000;"></canvas>
-</aside>
-
 <script>
     function drawOnCanvas(id) {
         var c = document.getElementById(id);
@@ -101,13 +96,16 @@
         border-radius: 15px;
     }
 
-     .jumbotron h1 {
-         color: black;
-         text-shadow: 5px 2px 5px #000000;
-         transition: color 0.5s ease;
-     }
+        .jumbotron h1 {
+            color: black;
+            text-shadow: 5px 2px 5px #000000;
+            transition: color 0.5s ease;
+        }
 
-    .jumbotron h1:hover { color: blue; }
+            .jumbotron h1:hover {
+                color: blue;
+            }
+
     #video-shaded:before {
         background: rgba(25,29,34,0.75);
     }
