feat (Companies): fix google maps plugin

--- a/FinalProject/Views/Store/Index.cshtml
+++ b/FinalProject/Views/Store/Index.cshtml
@@ -91,9 +91,7 @@
         padding: 0px;
     }
 </style>
-
-<script type="text/javascript"
-        src="https://maps.googleapis.com/maps/api/js?AIzaSyBVfO8LckdOHAot1a8rZW0bmJIoWO2A3os=API_KEY&sensor=true">
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCfiVsoXlAczf7sp0Uxl7XhL0XZm70XWcQ&sensor=true">
 </script>
 @Scripts.Render("~/bundles/Map")
 <script type="text/javascript">
