--- a/FinalProject/Views/Shared/_Layout.cshtml
+++ b/FinalProject/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
                 <nav class="nav navbar-nav">
                     @Html.ActionLink("Home", "Index", "Home")
                     @Html.ActionLink("Top-Tools", "Index", "Item")
-                    @Html.ActionLink("Top-Companies", "Index", "Store")
+                    @Html.ActionLink("Top-Companies", "Index", "Company")
                     @if (User.IsInRole("Admin"))
                     {
                         @Html.ActionLink("Statistics", "Index", "Statistics")<text> | </text>
