--- a/FinalProject/Views/Company/Create.cshtml
+++ b/FinalProject/Views/Company/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model FinalProject.Models.Store
+﻿@model FinalProject.Models.Company
 
 @{
     ViewBag.Title = "Create";
@@ -12,7 +12,7 @@
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>Store</h4>
+        <h4>Company</h4>
         <hr />
         @Html.ValidationSummary(true)
 
