--- a/FinalProject/Views/Company/Delete.cshtml
+++ b/FinalProject/Views/Company/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model FinalProject.Models.Store
+﻿@model FinalProject.Models.Company
 
 @{
     ViewBag.Title = "Delete";
@@ -8,7 +8,7 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Store</h4>
+    <h4>Company</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
