--- a/FinalProject/Views/Item/Index.cshtml
+++ b/FinalProject/Views/Item/Index.cshtml
@@ -46,10 +46,10 @@
                 Processor Type
             </th>
             <th>
-                Store Name
+                Company Name
             </th>
             <th>
-                Store Location
+                Company Location
             </th>
             <th>
                 Available From
@@ -77,10 +77,10 @@
                     @Html.DisplayFor(modelItem => item.ProcessorType)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Store.Name)
+                    @Html.DisplayFor(modelItem => item.Company.Name)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Store.Location)
+                    @Html.DisplayFor(modelItem => item.Company.Location)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.AvailableFrom)
