--- a/FinalProject/Views/Company/Create.cshtml
+++ b/FinalProject/Views/Company/Create.cshtml
@@ -40,20 +40,27 @@
                     @Html.ValidationMessageFor(model => model.Location)
                 </div>
             </div>
-
             <div class="form-group">
-                @Html.LabelFor(model => model.HasSecurity, new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.Coordinates.Lat, new {@class = "control-label col-md-2"})
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.HasSecurity)
-                    @Html.ValidationMessageFor(model => model.HasSecurity)
+                    @Html.EditorFor(model => model.Coordinates.Lat)
+                    @Html.ValidationMessageFor(model => model.Coordinates.Lat)
                 </div>
             </div>
-            
+
             <div class="form-group">
-                @Html.LabelFor(model => model.HasCrippleEntrance, new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.Coordinates.Long, new {@class = "control-label col-md-2"})
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.HasCrippleEntrance)
-                    @Html.ValidationMessageFor(model => model.HasCrippleEntrance)
+                    @Html.EditorFor(model => model.Coordinates.Long)
+                    @Html.ValidationMessageFor(model => model.Coordinates.Long)
+                </div>
+            </div>
+
+            <div class="form-group">
+                @Html.LabelFor(model => model.ImagePath, new {@class = "control-label col-md-2"})
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.ImagePath)
+                    @Html.ValidationMessageFor(model => model.ImagePath)
                 </div>
             </div>
 
