fix  (DevelopmentTools):  rename stuff and shit

--- a/FinalProject/Views/Company/Index.cshtml
+++ b/FinalProject/Views/Company/Index.cshtml
@@ -46,7 +46,7 @@
                 @Html.DisplayFor(modelItem => item.Location)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.MostPopularComputer.Name)
+                @Html.DisplayFor(modelItem => item.MostPopularDevelopmentTool.Name)
             </td>
             <td>
                 @Html.ActionLink("Details", "Details", new { id = item.CompanyId }) |
