--- a/FinalProject/Views/Shared/_Layout.cshtml
+++ b/FinalProject/Views/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
             <div class="navbar-collapse collapse navigation">
                 <nav class="nav navbar-nav">
                     @Html.ActionLink("Home", "Index", "Home")
-                    @Html.ActionLink("Top-Tools", "Index", "Item")
+                    @Html.ActionLink("Top-Tools", "Index", "DevelopmentTool")
                     @Html.ActionLink("Top-Companies", "Index", "Company")
                     @if (User.IsInRole("Admin"))
                     {
