--- a/FinalProject/Views/DevelopmentTool/Create.cshtml
+++ b/FinalProject/Views/DevelopmentTool/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model FinalProject.Models.Item
+﻿@model FinalProject.Models.DevelopmentTool
 
 @{
     ViewBag.Title = "Create";
@@ -11,7 +11,7 @@
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>Item</h4>
+        <h4>DevelopmentTool</h4>
         <hr />
         @Html.ValidationSummary(true)
 
@@ -25,10 +25,10 @@
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.AvailableFrom, new {@class = "control-label col-md-2"})
+                @Html.LabelFor(model => model.LastUpdate, new {@class = "control-label col-md-2"})
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.AvailableFrom)
-                    @Html.ValidationMessageFor(model => model.AvailableFrom)
+                    @Html.EditorFor(model => model.LastUpdate)
+                    @Html.ValidationMessageFor(model => model.LastUpdate)
                 </div>
             </div>
 
@@ -45,14 +45,6 @@
                 <div class="col-md-10">
                     @Html.EditorFor(model => model.Description)
                     @Html.ValidationMessageFor(model => model.Description)
-                </div>
-            </div>
-            
-            <div class="form-group">
-                @Html.LabelFor(model => model.Category, new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.Category)
-                    @Html.ValidationMessageFor(model => model.Category)
                 </div>
             </div>
 
