--- a/FinalProject/Views/DevelopmentTool/Delete.cshtml
+++ b/FinalProject/Views/DevelopmentTool/Delete.cshtml
@@ -1,14 +1,15 @@
-﻿@model FinalProject.Models.Item
+﻿@model FinalProject.Models.DevelopmentTool
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Delete";
 }
 
-<h2>Details</h2>
+<h2>Delete</h2>
 
+<h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Item</h4>
-	<hr />
+    <h4>DevelopmentTool</h4>
+    <hr />
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.Price)
@@ -19,11 +20,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.AvailableFrom)
+            @Html.DisplayNameFor(model => model.LastUpdate)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.AvailableFrom)
+            @Html.DisplayFor(model => model.LastUpdate)
         </dd>
 
         <dt>
@@ -41,18 +42,15 @@
         <dd>
             @Html.DisplayFor(model => model.Description)
         </dd>
-        
-        <dt>
-            @Html.DisplayNameFor(model => model.Category)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Category)
-        </dd>
 
     </dl>
+
+    @using (Html.BeginForm()) {
+        @Html.AntiForgeryToken()
+
+        <div class="form-actions no-color">
+            <input type="submit" value="Delete" class="btn btn-default" /> |
+            @Html.ActionLink("Back to List", "Index")
+        </div>
+    }
 </div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.ItemId }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
