--- a/FinalProject/Views/DevelopmentTool/Edit.cshtml
+++ b/FinalProject/Views/DevelopmentTool/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model FinalProject.Models.Item
+﻿@model FinalProject.Models.DevelopmentTool
 
 @{
     ViewBag.Title = "Edit";
@@ -12,10 +12,10 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Item</h4>
+        <h4>DevelopmentTool</h4>
         <hr />
         @Html.ValidationSummary(true)
-        @Html.HiddenFor(model => model.ItemId)
+        @Html.HiddenFor(model => model.Id)
 
         <div class="form-group">
             @Html.LabelFor(model => model.Price, new { @class = "control-label col-md-2" })
@@ -26,10 +26,10 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.AvailableFrom, new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.LastUpdate, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.AvailableFrom)
-                @Html.ValidationMessageFor(model => model.AvailableFrom)
+                @Html.EditorFor(model => model.LastUpdate)
+                @Html.ValidationMessageFor(model => model.LastUpdate)
             </div>
         </div>
 
@@ -46,14 +46,6 @@
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Description)
                 @Html.ValidationMessageFor(model => model.Description)
-            </div>
-        </div>
-        
-        <div class="form-group">
-            @Html.LabelFor(model => model.Category, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Category)
-                @Html.ValidationMessageFor(model => model.Category)
             </div>
         </div>
 
