feat: change statistics chart, not finished yet

--- a/FinalProject/Views/Shared/_Layout.cshtml
+++ b/FinalProject/Views/Shared/_Layout.cshtml
@@ -37,7 +37,7 @@
     @RenderBody()
     <hr/>
     <footer>
-        <p>Created for the collage of managment by Nadav Kaner, Bar Miliavsky, Yakir Kadkoda and Mor Tal as an excersize, &copy; December, 2016</p>
+        <p>Created for the collage of managment by Nadav Kaner, Bar Miliavsky, Yakir Kadkoda and Mor Tal as an exercise, &copy; December, 2016</p>
     </footer>
 </div>
     
