--- a/FinalProject/Views/DevelopmentTool/Details.cshtml
+++ b/FinalProject/Views/DevelopmentTool/Details.cshtml
@@ -4,11 +4,12 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
-
-<div>
-    <h4>DevelopmentTool</h4>
-	<hr />
+<h3>Development tool Details For: @Html.DisplayFor(model => model.Name)</h3>
+<hr/>
+<div style="position: relative;">
+    <div style="position: absolute; height: 0; right: 0;">
+        <img src="@Html.DisplayFor(model => model.ImagePath)" style="position: absolute; right: 50px; height: 100px;"/>
+    </div>
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.Price)
@@ -40,6 +41,21 @@
 
         <dd>
             @Html.DisplayFor(model => model.Description)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.SiteUrl)
+        </dt>
+
+        <dd>
+            <a href="@Html.DisplayFor(model => model.SiteUrl)">@Html.DisplayFor(model => model.SiteUrl)</a>
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Rate)
+        </dt>
+
+        <dd>
+           @Html.DisplayFor(model => model.Rate) / 10
         </dd>
 
     </dl>
