--- a/FinalProject/Views/DevelopmentTool/Index.cshtml
+++ b/FinalProject/Views/DevelopmentTool/Index.cshtml
@@ -11,14 +11,13 @@
     @Html.ActionLink("Create New", "Create")
 </p>
 
-<div class="row">
+<div style="margin: 15px 0">
     <strong>Filters</strong>
-</div>
-<div class="row">
-    @Html.ActionLink("Clear Filters", "Index")
+
+    <br/>@Html.ActionLink("Clear Filters", "Index")
 </div>
 
-<div class="row">
+<div>
     <table class="table">
         <tr>
             <th>
@@ -28,24 +27,16 @@
                 Price
             </th>
             <th>
-                Touch Screen
-            </th>
-            <th>
-                Graphics Card Manufacturer
-            </th>
-            <th>
-                Processor Type
-            </th>
-            <th>
                 Company Name
             </th>
             <th>
-                Company Location
+                Last update
             </th>
             <th>
-                Available From
+                Source Code Licence
             </th>
             <th>
+                Actions
             </th>
         </tr>
 
@@ -59,23 +50,23 @@
                     @Html.DisplayFor(modelItem => item.Price)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Company.Name)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Company.Location)
+                    @Html.ActionLink(item.Company.Name, "Details", "Company", new {id = item.Company.CompanyId}, null)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.LastUpdate)
                 </td>
                 <td>
-                    @Html.ActionLink("Details", "Details", new { id = item.Id }) |
+                    @Html.DisplayFor(modelItem => item.SourceCodeLicense)
+                </td>
+                <td>
+                    @Html.ActionLink("Details", "Details", new {id = item.Id}) |
 
                     @if (User.IsInRole("Admin"))
                     {
-                        @Html.ActionLink("Edit", "Edit", new { id = item.Id })<span>
+                        @Html.ActionLink("Edit", "Edit", new {id = item.Id})<span>
                             |
                         </span>
-                        @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                        @Html.ActionLink("Delete", "Delete", new {id = item.Id})
                     }
                 </td>
             </tr>
