--- a/FinalProject/Views/Home/Index.cshtml
+++ b/FinalProject/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 @model IEnumerable<FinalProject.Models.Company>
 
 <div class="row" style="position: relative; overflow-y: hidden; height: 300px">
-    <video width="100%" autoplay loop>
+    <video style=" width: 100%; min-height: 300px; }" autoplay loop>
         <source src="https://s3.amazonaws.com/www-assets.invisionapp.com/Homepage/enterprise-loop.mp4" type="video/mp4" style="z-index: 10;">
     </video>
     <div style="position: absolute; top: 0; right: 0; width: 100%; height: 100%; background-color: #191d22; background-color: rgba(25, 29, 34, .75);">
@@ -133,5 +133,6 @@
         .employee-wrap {
             justify-content: space-around;
             width: 50%;
+            min-width: 300px;
         }
     </style>
