feat(search): added search in the nav bar
*searches all companies and devtools by name

--- a/FinalProject/Content/Site.css
+++ b/FinalProject/Content/Site.css
@@ -1,12 +1,12 @@
 ﻿body {
     padding-bottom: 20px;
-    padding-top: 50px;
      font-family: 'Roboto', sans-serif;
 }
 
 /* Set padding to keep content from hitting the edges */
 
 .body-content {
+    padding-top: 50px !important;
     padding-left: 15px;
     padding-right: 15px;
     background-color: #ffffff;
@@ -36,4 +36,8 @@ input[type="checkbox"].input-validation-error { border: 0 none; }
 
 @font-face {
      font-family: 'Roboto', sans-serif;
+}
+
+.search-form {
+    display: inherit;
 }
