--- a/FinalProject/Views/Shared/_Layout.cshtml
+++ b/FinalProject/Views/Shared/_Layout.cshtml
@@ -26,8 +26,18 @@
                     {
                         @Html.ActionLink("Statistics", "Index", "Statistics")<text> | </text>
                     }
-                    @Html.ActionLink("About", "About", "Home")
                 </nav>
+                <div class="col-sm-3 col-md-3">
+                    <div class="input-group">
+                        @using (Html.BeginForm("Index", "Search", FormMethod.Get, new {@class="search-form"}))
+                        {
+                            <input type="text" class="form-control" placeholder="Search" name="searchRequest" id="searchRequest">
+                            <div class="input-group-btn">
+                                <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+                            </div>
+                        }
+                    </div>
+                </div>
                 @Html.Partial("_LoginPartial")
             </div>
         </div>
@@ -37,7 +47,7 @@
     @RenderBody()
     <hr/>
     <footer>
-        <p>Created for the collage of managment by Nadav Kaner, Bar Miliavsky, Yakir Kadkoda and Mor Tal as an exercise, &copy; December, 2016</p>
+        <p>Created for the collage of managment by Nadav Kaner, Bar Miliavsky, Mor Tal and Yakir Kadkoda as an exercise, &copy; December, 2016</p>
     </footer>
 </div>
     
