fix (user): fix authentication by storing the user id
Authentication will fail in some cases because the user id changed after restarting
the iis because of the db init

--- a/FinalProject/Views/Shared/_Layout.cshtml
+++ b/FinalProject/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
                     @Html.ActionLink("Top-Companies", "Index", "Company")
                     @if (User.IsInRole("Admin"))
                     {
-                        @Html.ActionLink("Statistics", "Index", "Statistics")<text> | </text>
+                        @Html.ActionLink("Statistics", "Index", "Statistics")
                     }
                 </nav>
                 <div class="col-sm-3 col-md-3">
