--- a/FinalProject/Views/Shared/_Layout.cshtml
+++ b/FinalProject/Views/Shared/_Layout.cshtml
@@ -14,30 +14,31 @@
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
                 </button>
                 @Html.ActionLink("Dev Tools Search Angine", "Index", "Home", null, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse navigation">
-                <nav class="nav navbar-nav">
-                    @Html.ActionLink("Home", "Index", "Home")
-                    @Html.ActionLink("Top-Tools", "Index", "DevelopmentTool")
-                    @Html.ActionLink("Top-Companies", "Index", "Company")
+                <ul class="nav navbar-nav">
+                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                    <li>@Html.ActionLink("Top-Tools", "Index", "DevelopmentTool")</li>
+                    <li>@Html.ActionLink("Top-Companies", "Index", "Company")</li>
                     @if (User.IsInRole("Admin"))
                     {
-                        @Html.ActionLink("Statistics", "Index", "Statistics")
+                        <li>@Html.ActionLink("Statistics", "Index", "Statistics")</li>
                     }
-                </nav>
-                <div class="col-sm-3 col-md-3">
-                    <div class="input-group">
-                        @using (Html.BeginForm("Index", "Search", FormMethod.Get, new {@class="search-form"}))
+                    <li style="max-width: 247px; margin-left:10px; margin-right: 10px;">
+                        @using (Html.BeginForm("Index", "Search", FormMethod.Get, new { @class = "search-form input-group" }))
                         {
                             <input type="text" class="form-control" placeholder="Search" name="searchRequest" id="searchRequest">
                             <div class="input-group-btn">
                                 <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
                             </div>
                         }
-                    </div>
-                </div>
+                    </li>
+                </ul>
                 @Html.Partial("_LoginPartial")
             </div>
         </div>
