feat (eBay): Added ebay item list

--- a/FinalProject/Views/Shared/_Layout.cshtml
+++ b/FinalProject/Views/Shared/_Layout.cshtml
@@ -25,6 +25,7 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("Top-Tools", "Index", "DevelopmentTool")</li>
                     <li>@Html.ActionLink("Top-Companies", "Index", "Company")</li>
+                    <li>@Html.ActionLink("Buy now", "Index", "Buy")</li>
                     @if (User.IsInRole("Admin"))
                     {
                         <li>@Html.ActionLink("Statistics", "Index", "Statistics")</li>
