--- a/FinalProject/Views/Buy/Index.cshtml
+++ b/FinalProject/Views/Buy/Index.cshtml
@@ -1,39 +1,34 @@
-﻿
+﻿@using FinalProject.Models
+@model FinalProject.Controllers.BuyController
 
-
-
-
-
-
+@{
+    ViewBag.Title = "Buy now";
+}
 
 <h2>Shop From Ebay</h2>
-<table class="table table-striped table-hover ">
+<table class="table table-striped table-hover">
     <thead>
         <tr>
             <th>#</th>
-            <th>Product Full Name</th>
+            <th>Product Name</th>
             <th>Price</th>
             <th>Buy</th>
         </tr>
     </thead>
     <tbody>
-
         @{
-            int counter = 1;
-            foreach (FinalProject.Controllers.BuyController.EbayItem i in ViewBag.ebayResuls)
+            int productNumber = 1;
+            foreach (Buy.EbayItem index in ViewBag.ebayResuls)
             {
                 <tr>
-                    <td>@Html.Raw(counter.ToString())</td>
-                    <td>@Html.Raw(i.name)</td>
-                    <td>@Html.Raw(i.price)</td>
-                    <td><a href="@Html.Raw(i.url)" class="btn btn-primary btn-xs">Buy</a></td>
+                    
+                    <td>@productNumber.ToString()</td>
+                    <td>@index.ProductName</td>
+                    <td>@index.Price $</td>
+                    <td><a href="@index.URL" class="btn btn-primary btn-xs">Buy</a></td>
                 </tr>
-
-                counter++;
+                productNumber++;
             }
-
         }
-
-
     </tbody>
 </table>
