feat: add bar chart to statistic

--- a/FinalProject/Views/Company/Details.cshtml
+++ b/FinalProject/Views/Company/Details.cshtml
@@ -21,9 +21,9 @@
     @Html.DisplayFor(model => model.Location)
 
     <div style="font-weight: bold; margin: 0 10px">
-        @Html.DisplayNameFor(model => model.Revenue):
+        @Html.DisplayNameFor(model => model.TotalRevenue):
     </div>
-    @Html.DisplayFor(model => model.Revenue)$
+    @Html.DisplayFor(model => model.TotalRevenue)$
 </div>
 
 <div class="companyDetails" style="position: relative; left: 40px; margin: 10px 0;">
