--- a/FinalProject/Views/Statistics/Index.cshtml
+++ b/FinalProject/Views/Statistics/Index.cshtml
@@ -8,24 +8,22 @@
 
 <div id="pieChart"></div>
 <div id="barChart"></div>
-<div id="lineChart"></div>
 
 <style type="text/css">
+    #pieChart {    
+	position: relative;
+    top: 30px;
+    left: 50px;
+    width: 400px;
+    height: 250px;
+}
 
-
-    #lineChart {
-        position: absolute;
-        top: 10px;
-        left: 410px;
-        height: 150px;
-    }
-
-    #barChart {
-        position: absolute;
-        top: 160px;
-        left: 410px;
-        height: 250px;
-    }
+#barChart {
+	position: relative;
+    top: -81px;
+    left: 490px;
+    height: 250px;
+}
 
     .slice {
         font-size: 12pt;
@@ -210,21 +208,17 @@
 
         // Pie chart title			
         vis.append("svg:text")
-	     	.attr("dy", ".35em")
-	      .attr("text-anchor", "middle")
-	      .text("Companies Revenue")
-	      .attr("class", "title")
-        ;
-
-
+            .attr("dy", ".35em")
+            .attr("text-anchor", "middle")
+            .text("Companies Revenue")
+            .attr("class", "title");
 
         function mouseover() {
             d3.select(this).select("path").transition()
                 .duration(750)
                           //.attr("stroke","red")
                           //.attr("stroke-width", 1.5)
-                          .attr("d", arcFinal3)
-            ;
+                          .attr("d", arcFinal3);
         }
 
         function mouseout() {
@@ -240,11 +234,239 @@
             /* update bar chart when user selects piece of the pie chart */
             //updateBarChart(dataset[i].category);
             updateBarChart(d.data.company, color(i));
-            updateLineChart(d.data.company, color(i));
-
         }
     }
 
     dsPieChart();
     
+/*
+############# BAR CHART ###################
+-------------------------------------------
+*/
+
+    var companies = @Html.Raw(Json.Encode(Model.CompanyRevenues.Select(x => x.Company)));
+    var revenuesForYears =
+        @Html.Raw(Json.Encode(Model.CompanyRevenues.SelectMany(x => x.RevenueForYear, (parant, pair) => new
+        {
+            parant.Company,
+            pair.Year,
+            pair.Revenue
+        })));
+
+    var datasetBarChart = revenuesForYears.map(function (key, i) {
+        return {
+            'company': key.Company,
+            'year': key.Year,
+            'revenue': key.Revenue
+        };
+    });
+
+    // set initial company value
+    var company = datasetBarChart[0].company;
+
+    function datasetBarChosen(company) {
+        var ds = [];
+        for (x in datasetBarChart) {
+            if(datasetBarChart[x].company==company){
+                ds.push(datasetBarChart[x]);
+            } 
+        }
+        return ds;
+    }
+
+    function dsBarChartBasics() {
+
+        var margin = {top: 30, right: 5, bottom: 20, left: 50},
+		width = 500 - margin.left - margin.right,
+	    height = 250 - margin.top - margin.bottom,
+		colorBar = d3.scale.category20(),
+		barPadding = 1;
+		
+        return {
+            margin : margin, 
+            width : width, 
+            height : height, 
+            colorBar : colorBar, 
+            barPadding : barPadding
+        }
+    }
+
+    function dsBarChart() {
+
+        var firstDatasetBarChart = datasetBarChosen(company);         	
+	
+        var basics = dsBarChartBasics();
+	
+        var margin = basics.margin,
+            width = basics.width,
+           height = basics.height,
+            colorBar = basics.colorBar,
+            barPadding = basics.barPadding;
+					
+        var xScale = d3.scale.linear()
+                             .domain([0, firstDatasetBarChart.length])
+                             .range([0, width]);
+						
+        // Create linear y scale 
+        // Purpose: No matter what the data is, the bar should fit into the svg area; bars should not
+        // get higher than the svg height. Hence incoming data needs to be scaled to fit into the svg area.  
+        var yScale = d3.scale.linear()
+                // use the max funtion to derive end point of the domain (max value of the dataset)
+                // do not use the min value of the dataset as min of the domain as otherwise you will not see the first bar
+               .domain([0, d3.max(firstDatasetBarChart, function(d) { return d.revenue; })])
+               // As coordinates are always defined from the top left corner, the y position of the bar
+               // is the svg height minus the data value. So you basically draw the bar starting from the top. 
+               // To have the y position calculated by the range function
+               .range([height, 0])
+        ;
+	
+        //Create SVG element
+	
+        var svg = d3.select("#barChart")
+                .append("svg")
+                .attr("width", width + margin.left + margin.right)
+                .attr("height", height + margin.top + margin.bottom)
+                .attr("id","barChartPlot");
+	
+        var plot = svg
+                .append("g")
+                .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+	            
+        plot.selectAll("rect")
+               .data(firstDatasetBarChart)
+               .enter()
+               .append("rect")
+                .attr("x", function(d, i) {
+                    return xScale(i);
+                })
+               .attr("width", width / firstDatasetBarChart.length - barPadding)   
+                .attr("y", function(d) {
+                    return yScale(d.revenue);
+                })  
+                .attr("height", function(d) {
+                    return height-yScale(d.revenue);
+                })
+                .attr("fill", "lightgrey");
+	
+		
+        // Add y labels to plot	
+        plot.selectAll("text")
+        .data(firstDatasetBarChart)
+        .enter()
+        .append("text")
+        .text(function(d) {
+            return formatAsInteger(d3.round(d.revenue));
+        })
+        .attr("text-anchor", "middle")
+        // Set x position to the left edge of each bar plus half the bar width
+        .attr("x", function(d, i) {
+            return (i * (width / firstDatasetBarChart.length)) + ((width / firstDatasetBarChart.length - barPadding) / 2);
+        })
+        .attr("y", function(d) {
+            return yScale(d.revenue) + 14;
+        })
+        .attr("class", "yAxis");
+	
+        // Add x labels to chart	
+        var xLabels = svg
+                .append("g")
+                .attr("transform", "translate(" + margin.left + "," + (margin.top + height)  + ")");
+	
+        xLabels.selectAll("text.xAxis")
+              .data(firstDatasetBarChart)
+              .enter()
+              .append("text")
+              .text(function(d) { return d.year;})
+              .attr("text-anchor", "middle")
+                // Set x position to the left edge of each bar plus half the bar width
+                               .attr("x", function(d, i) {
+                                   return (i * (width / firstDatasetBarChart.length)) + ((width / firstDatasetBarChart.length - barPadding) / 2);
+                               })
+              .attr("y", 15)
+              .attr("class", "xAxis");			
+	 
+        svg.append("text")
+            .attr("x", (width + margin.left + margin.right)/2)
+            .attr("y", 15)
+            .attr("class","title")				
+            .attr("text-anchor", "middle")
+            .text("Overall Revenue");
+    }
+
+    dsBarChart();
+
+    function updateBarChart(company, colorChosen) {
+	
+        var currentDatasetBarChart = datasetBarChosen(company);
+		
+        var basics = dsBarChartBasics();
+	
+        var margin = basics.margin,
+			width = basics.width,
+		   height = basics.height,
+			colorBar = basics.colorBar,
+			barPadding = basics.barPadding
+        ;
+		
+        var 	xScale = d3.scale.linear()
+			.domain([0, currentDatasetBarChart.length])
+			.range([0, width])
+        ;
+		
+			
+        var yScale = d3.scale.linear()
+	      .domain([0, d3.max(currentDatasetBarChart, function(d) { return d.revenue; })])
+	      .range([height,0])
+        ;
+	      
+        var svg = d3.select("#barChart svg");
+	      
+        var plot = d3.select("#barChartPlot")
+         .datum(currentDatasetBarChart)
+        ;
+	
+        /* Note that here we only have to select the elements - no more appending! */
+        plot.selectAll("rect")
+	      .data(currentDatasetBarChart)
+	      .transition()
+			.duration(750)
+			.attr("x", function(d, i) {
+			    return xScale(i);
+			})
+		   .attr("width", width / currentDatasetBarChart.length - barPadding)   
+			.attr("y", function(d) {
+			    return yScale(d.revenue);
+			})  
+			.attr("height", function(d) {
+			    return height-yScale(d.revenue);
+			})
+			.attr("fill", colorChosen)
+        ;
+		
+        plot.selectAll("text.yAxis") // target the text element(s) which has a yAxis class defined
+			.data(currentDatasetBarChart)
+			.transition()
+			.duration(750)
+		   .attr("text-anchor", "middle")
+		   .attr("x", function(d, i) {
+		       return (i * (width / currentDatasetBarChart.length)) + ((width / currentDatasetBarChart.length - barPadding) / 2);
+		   })
+		   .attr("y", function(d) {
+		       return yScale(d.revenue) + 14;
+		   })
+		   .text(function(d) {
+		       return formatAsInteger(d3.round(d.revenue));
+		   })
+		   .attr("class", "yAxis")					 
+        ;
+		
+
+        svg.selectAll("text.title") // target the text element(s) which has a title class defined
+			.attr("x", (width + margin.left + margin.right)/2)
+			.attr("y", 15)
+			.attr("class","title")				
+			.attr("text-anchor", "middle")
+			.text(company + "'s Revenue")
+        ;
+    }
 </script>
