--- a/FinalProject/Views/Shared/_Layout.cshtml
+++ b/FinalProject/Views/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
                     <li style="max-width: 247px; margin-left:10px; margin-right: 10px;">
                         @using (Html.BeginForm("Index", "Search", FormMethod.Get, new { @class = "search-form input-group" }))
                         {
-                            <input type="text" class="form-control" placeholder="Search" name="searchRequest" id="searchRequest">
+                            <input type="text" class="form-control" placeholder="Search" name="searchRequest" id="searchRequest" style="align-self: center;">
                             <div class="input-group-btn">
                                 <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
                             </div>
